--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=20"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -36,7 +39,11 @@
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1",
     "python-shell": "^5.0.0",
+    "translate-google": "^1.5.0",
     "unfluff": "^1.1.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "rimraf": "^6.0.1"
   }
 }
